test(short_url_test.js): test cases for original url added
