# routes/url_shorter.js
@@ -6,8 +6,9 @@ const { boomifyErrorsMiddleware } = require('../middlewares/error')
 
 router.post('/', shortUrlController.generateShortUrl)
 router.get('/duplicates',shortUrlController.getDuplicatesCount)
+router.get('/original', shortUrlController.getOriginalUrlByShortUrl)
 router.get('/:identifier', shortUrlController.getOriginalUrlByIdentifier)
-router.get('/', shortUrlController.getOriginalUrlByShortUrl)
+
 
 router.use(boomifyErrorsMiddleware)
 module.exports = router
